unpackaged/main/default/objects/Driver_Daily_Check_List__c/Driver_Daily_Check_List__c.object-meta.xml
<CustomObject>
    <label>Driver Check List</label>
    <nameField>
        <displayFormat>DC-{0000}</displayFormat>
        <label>Reference No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Driver Check Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>