unpackaged/main/default/objects/Driver_Daily_Check_List__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.ETSALES_Account_Type__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Driver Check Lists</relationshipLabel>
    <relationshipName>Driver_Check_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>