unpackaged/main/default/objects/Driver_Daily_Check_List__c/fields/Administrative_charge_for_the_transfer__c.field-meta.xml
<CustomField>
    <fullName>Administrative_charge_for_the_transfer__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Administrative charge for the transfer of the workshop and follow-up reform</inlineHelpText>
    <label>Administrative charge for the transfer</label>
    <type>Checkbox</type>
</CustomField>