unpackaged/main/default/objects/Driver_Daily_Check_List__c/fields/Ambulance_box_meets_all_ingredients__c.field-meta.xml
<CustomField>
    <fullName>Ambulance_box_meets_all_ingredients__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>There are 2 fire extinguishers and a first aid kit that meets the component and is usable</inlineHelpText>
    <label>Ambulance box meets all ingredients</label>
    <type>Checkbox</type>
</CustomField>