unpackaged/main/default/objects/Driver_Daily_Check_List__c/fields/Assigned_Resources__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Resources__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Resources</label>
    <referenceTo>SALine_Assigned_Resource__c</referenceTo>
    <relationshipLabel>Driver Check Lists</relationshipLabel>
    <relationshipName>Driver_Check_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>