unpackaged/main/default/objects/Driver_Daily_Check_List__c/fields/Contact_internal_mobile_workshop__c.field-meta.xml
<CustomField>
    <fullName>Contact_internal_mobile_workshop__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Contact internal mobile workshop</inlineHelpText>
    <label>Contact internal mobile workshop</label>
    <type>Checkbox</type>
</CustomField>