unpackaged/main/default/objects/Driver_Daily_Check_List__c/fields/Emergency_button__c.field-meta.xml
<CustomField>
    <fullName>Emergency_button__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Empty Bus alert, movement sensor</inlineHelpText>
    <label>Emergency button</label>
    <type>Checkbox</type>
</CustomField>