unpackaged/main/default/objects/Driver_Daily_Check_List__c/fields/Ensure_inspection_observations_are_corre__c.field-meta.xml
<CustomField>
    <fullName>Ensure_inspection_observations_are_corre__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Ensure inspection observations are correct</inlineHelpText>
    <label>Ensure inspection observations correct</label>
    <type>Checkbox</type>
</CustomField>