unpackaged/main/default/objects/Driver_Daily_Check_List__c/fields/Examination_of_bus_fluids__c.field-meta.xml
<CustomField>
    <fullName>Examination_of_bus_fluids__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Examination of bus fluids (engine/power steering/clutch/brakes/cooling water)</inlineHelpText>
    <label>Examination of bus fluids</label>
    <type>Checkbox</type>
</CustomField>