unpackaged/main/default/objects/Driver_Daily_Check_List__c/fields/Internal_Number__c.field-meta.xml
<CustomField>
    <fullName>Internal_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Internal Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>