unpackaged/main/default/objects/Driver_Daily_Check_List__c/fields/Make_sure_the_route_e_board_works__c.field-meta.xml
<CustomField>
    <fullName>Make_sure_the_route_e_board_works__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Make sure the route e - board works</inlineHelpText>
    <label>Make sure the route e - board works</label>
    <type>Checkbox</type>
</CustomField>