unpackaged/main/default/objects/Driver_Daily_Check_List__c/fields/Morning_Trip_2__c.field-meta.xml
<CustomField>
    <fullName>Morning_Trip_2__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Thermal Screening Manual Device</inlineHelpText>
    <label>Morning Trip 2</label>
    <type>Checkbox</type>
</CustomField>