unpackaged/main/default/objects/Driver_Daily_Check_List__c/fields/Morning_Trip_3__c.field-meta.xml
<CustomField>
    <fullName>Morning_Trip_3__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Social Distancing Seat&#39;s Stickers</inlineHelpText>
    <label>Morning Trip 3</label>
    <type>Checkbox</type>
</CustomField>