unpackaged/main/default/objects/Driver_Daily_Check_List__c/fields/Morning_Trip_4__c.field-meta.xml
<CustomField>
    <fullName>Morning_Trip_4__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Bus Ventilation for 5 Minutes Before Each Trip</inlineHelpText>
    <label>Morning Trip 4</label>
    <type>Checkbox</type>
</CustomField>