unpackaged/main/default/objects/Driver_Daily_Check_List__c/fields/Morning_Trip__c.field-meta.xml
<CustomField>
    <fullName>Morning_Trip__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Bus interiors tidness and cleanness from Biological wastes</inlineHelpText>
    <label>Morning Trip</label>
    <type>Checkbox</type>
</CustomField>