unpackaged/main/default/objects/Driver_Daily_Check_List__c/fields/Motion_Detector__c.field-meta.xml
<CustomField>
    <fullName>Motion_Detector__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Empty Bus alert, movement sensor</inlineHelpText>
    <label>Motion Detector</label>
    <type>Checkbox</type>
</CustomField>