unpackaged/main/default/objects/Driver_Daily_Check_List__c/fields/Observations_to_not_affect_the_safety_of__c.field-meta.xml
<CustomField>
    <fullName>Observations_to_not_affect_the_safety_of__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Observations to not affect the safety of the bus</inlineHelpText>
    <label>Observations to not affect the safety</label>
    <type>Checkbox</type>
</CustomField>