unpackaged/main/default/objects/Driver_Daily_Check_List__c/fields/Rear_surveillance_camera__c.field-meta.xml
<CustomField>
    <fullName>Rear_surveillance_camera__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The safety of rear surveillance camera and the moving backward horn</inlineHelpText>
    <label>Rear surveillance camera</label>
    <type>Checkbox</type>
</CustomField>