unpackaged/main/default/objects/Driver_Daily_Check_List__c/fields/Safety_clarity_of_institution_poster__c.field-meta.xml
<CustomField>
    <fullName>Safety_clarity_of_institution_poster__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The Safety and clarity of the institution poster (Institution logo - extension - school bus label - contact centre number) of bus rear and front glasses</inlineHelpText>
    <label>Safety &amp; clarity of institution poster</label>
    <type>Checkbox</type>
</CustomField>