unpackaged/main/default/objects/Driver_Daily_Check_List__c/fields/Safety_of_mirrors_cleanliness__c.field-meta.xml
<CustomField>
    <fullName>Safety_of_mirrors_cleanliness__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Safety of mirrors-cleanliness</description>
    <inlineHelpText>The Safety of side and internal mirrors in terms of cleanliness, numbers and the appropriate field of view</inlineHelpText>
    <label>Safety of mirrors-cleanliness</label>
    <type>Checkbox</type>
</CustomField>