unpackaged/main/default/objects/Driver_Daily_Check_List__c/fields/Safety_of_seats_and_seatbelts__c.field-meta.xml
<CustomField>
    <fullName>Safety_of_seats_and_seatbelts__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Safety of seats and seatbelts including the driver seat</inlineHelpText>
    <label>Safety of seats and seatbelts</label>
    <type>Checkbox</type>
</CustomField>