unpackaged/main/default/objects/Driver_Daily_Check_List__c/fields/Safety_of_the_bus_body__c.field-meta.xml
<CustomField>
    <fullName>Safety_of_the_bus_body__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The Safety of the bus body without any impacts of accident and crashes</inlineHelpText>
    <label>Safety of the bus body</label>
    <type>Checkbox</type>
</CustomField>