unpackaged/main/default/objects/Driver_Daily_Check_List__c/fields/Safety_of_tires_and_air_pressure__c.field-meta.xml
<CustomField>
    <fullName>Safety_of_tires_and_air_pressure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Safety of tires and air pressure</label>
    <type>Checkbox</type>
</CustomField>