unpackaged/main/default/objects/Driver_Daily_Check_List__c/fields/Safety_of_wheelchair_lift_and_belts__c.field-meta.xml
<CustomField>
    <fullName>Safety_of_wheelchair_lift_and_belts__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The Safety of the special need wheelchair lift and belts</inlineHelpText>
    <label>Safety of  wheelchair lift and belts</label>
    <type>Checkbox</type>
</CustomField>