unpackaged/main/default/objects/Driver_Daily_Check_List__c/fields/School__c.field-meta.xml
<CustomField>
    <fullName>School__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>School</label>
    <referenceTo>ETST_School__c</referenceTo>
    <relationshipLabel>Driver Check Lists</relationshipLabel>
    <relationshipName>Driver_Check_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>