unpackaged/main/default/objects/Driver_Daily_Check_List__c/fields/Second_Afternoon_Trip_Double_Trips_2__c.field-meta.xml
<CustomField>
    <fullName>Second_Afternoon_Trip_Double_Trips_2__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Thermal Screening Manual Device</inlineHelpText>
    <label>Second Afternoon Trip (Double Trips) 2</label>
    <type>Checkbox</type>
</CustomField>