unpackaged/main/default/objects/Driver_Daily_Check_List__c/fields/Second_Morning_Trip_Double_Trips_3__c.field-meta.xml
<CustomField>
    <fullName>Second_Morning_Trip_Double_Trips_3__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Social Distancing Seat&#39;s Stickers</inlineHelpText>
    <label>Second Morning Trip (Double Trips) 3</label>
    <type>Checkbox</type>
</CustomField>