unpackaged/main/default/objects/Driver_Daily_Check_List__c/fields/Second_Morning_Trip_Double_Trips_4__c.field-meta.xml
<CustomField>
    <fullName>Second_Morning_Trip_Double_Trips_4__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Bus Ventilation for 5 Minutes Before Each Trip</inlineHelpText>
    <label>Second Morning Trip (Double Trips) 4</label>
    <type>Checkbox</type>
</CustomField>