unpackaged/main/default/objects/Driver_Daily_Check_List__c/fields/Second_Morning_Trip_Double_Trips__c.field-meta.xml
<CustomField>
    <fullName>Second_Morning_Trip_Double_Trips__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Bus interiors tidness and cleanness from Biological wastes</inlineHelpText>
    <label>Second Morning Trip (Double Trips)</label>
    <type>Checkbox</type>
</CustomField>