unpackaged/main/default/objects/Driver_Daily_Check_List__c/fields/Station__c.field-meta.xml
<CustomField>
    <fullName>Station__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Station</label>
    <length>255</length>
    <type>Text</type>
</CustomField>