unpackaged/main/default/objects/Driver_Daily_Check_List__c/fields/Stop_sign__c.field-meta.xml
<CustomField>
    <fullName>Stop_sign__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The Safety of Emergency and stop sign doors in a way that ensures they are kept securely closed and cannot be opened during a trips</inlineHelpText>
    <label>Stop sign</label>
    <type>Checkbox</type>
</CustomField>