unpackaged/main/default/objects/Driver_Daily_Check_List__c/fields/The_Safety_of_bus_rear_and_front_glasses__c.field-meta.xml
<CustomField>
    <fullName>The_Safety_of_bus_rear_and_front_glasses__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The Safety of signals, lights, windows and bus rear and front glasses</inlineHelpText>
    <label>The Safety of bus rear and front glasses</label>
    <type>Checkbox</type>
</CustomField>