unpackaged/main/default/objects/Driver_Daily_Check_List__c/fields/The_Safety_of_signals_lights_and_window__c.field-meta.xml
<CustomField>
    <fullName>The_Safety_of_signals_lights_and_window__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The Safety of signals, lights, windows and bus rear and front glasses</inlineHelpText>
    <label>The Safety of signals, lights and window</label>
    <type>Checkbox</type>
</CustomField>