unpackaged/main/default/objects/Driver_Daily_Check_List__c/fields/The_Safety_of_windscreen__c.field-meta.xml
<CustomField>
    <fullName>The_Safety_of_windscreen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>The Safety of windscreen</label>
    <type>Checkbox</type>
</CustomField>