unpackaged/main/default/objects/Driver_Daily_Check_List__c/fields/Thermometer__c.field-meta.xml
<CustomField>
    <fullName>Thermometer__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Empty Bus alert, movement sensor</inlineHelpText>
    <label>Thermometer</label>
    <type>Checkbox</type>
</CustomField>