unpackaged/main/default/objects/Driver_Daily_Check_List__c/fields/Vital_bus_inspections_completed__c.field-meta.xml
<CustomField>
    <fullName>Vital_bus_inspections_completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vital bus inspections completed</label>
    <type>Checkbox</type>
</CustomField>