unpackaged/main/default/objects/Driver_Daily_Check_List__c/fields/Working_of_air_conditioning__c.field-meta.xml
<CustomField>
    <fullName>Working_of_air_conditioning__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Make sure the air-conditioning system inside the school bus is working well</inlineHelpText>
    <label>Working of air-conditioning</label>
    <type>Checkbox</type>
</CustomField>