unpackaged/main/default/objects/Driver_Daily_Check_List__c/fields/X4_6_emergency_hammers_to_break_glass__c.field-meta.xml
<CustomField>
    <fullName>X4_6_emergency_hammers_to_break_glass__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Make sure there are 4 to 6 emergency hammers to break the glass of the emergency exit depending on the size of bus</inlineHelpText>
    <label>4 - 6 emergency hammers to break glass</label>
    <type>Checkbox</type>
</CustomField>